Added aspect ratio selection

--- a/index.html
+++ b/index.html
@@ -46,9 +46,18 @@
         </div>
     </div>
 
+    <div class="aspect-ratio-selection">
+        <label for="aspect-ratio">Выберите соотношение сторон:</label>
+        <select id="aspect-ratio" name="aspect-ratio">
+            <option value="1:1">1:1</option>
+            <option value="3:4">3:4</option>
+        </select>
+    </div>     
+
     <div id="thumbnails-container">
         <!-- Здесь будут отображаться миниатюры -->
     </div>
+    
     <button id="get-defective" class="action-button">Отметить как неудачные</button>
 
     <div id="overlay"></div>
