only fabrikont banners upload
теперь загружаются только те баннеры, у которых домен в <picture> содержит контентфабрику

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <input type="text" id="csv-id-column" placeholder="CSV ID Column (e.g. ID Cruise)">
                 <input type="text" id="csv-image-column" placeholder="CSV Image Column (e.g. Image URL)">
             </div>
+            <div id="banner-count" class="banner-count">
+                Загружено баннеров: 0
+            </div>
         </div>
         
         <div id="folder-input" class="tab-content">
