добавлена проверка форматов 16:5

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <select id="aspect-ratio" name="aspect-ratio">
             <option value="1:1">1:1</option>
             <option value="3:4">3:4</option>
+            <option value="16:5">16:5</option>
         </select>
     </div>     
 
