--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
             <option value="3:4">3:4</option>
             <option value="16:5">16:5</option>
         </select>
+
+        <label for="sort-direction" class="sort-label">Сортировка по дате:</label>
+        <select id="sort-direction" name="sort-direction">
+            <option value="desc">Сначала новые</option>
+            <option value="asc">Сначала старые</option>
+        </select>
     </div>     
 
     <div id="thumbnails-container">
