Поддержка YML-формата

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <div id="feed-input" class="tab-content active">
             <div class="feed-format">
                 <button class="format-button active" data-format="xml">XML</button>
+                <button class="format-button" data-format="yml">YML</button>
                 <button class="format-button" data-format="csv">CSV</button>
             </div>
-            <input type="file" id="feed-picker" accept=".xml, .csv">
+            <input type="file" id="feed-picker" accept=".xml, .yml, .csv">
             <div id="xml-tags" class="format-fields">
                 <input type="text" id="xml-id-tag" placeholder="XML ID Tag (e.g. id)">
                 <input type="text" id="xml-image-tag" placeholder="XML Image Tag (e.g. picture)">
