Folders upload bug fix

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
         </div>
 
         <div id="folder-input" class="tab-content">
-            <input type="file" id="folder-picker" webkitdirectory directory multiple>
+            <div class="feed-format">
+                <input type="file" id="folder-picker" webkitdirectory directory multiple>
+            </div>
+            <div id="banner-count" class="banner-count">
+                Загружено баннеров: 0
+            </div>
         </div>
     </div>
 
